<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2"
    tools:context="com.souchard.alcoolxgasolina.CalculoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.65"
            android:paddingTop="20dp"
            android:text="@string/calculo_consumo"
            android:textAlignment="center"
            android:textColor="#006400"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <EditText
           android:layout_width="wrap_content"
           android:layout_height="50sp"
           android:inputType="number"
           android:background="@drawable/border"
           android:backgroundTintMode="src_over"
           android:textColorHint="@color/colorAccent"
           android:textColorLink="@color/colorAccent"
           android:textSize="20sp"
           android:maxLength="5"
           android:maxLines="1"
           android:textAlignment="center"
           android:id="@+id/editTextKilometragem" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:inputType="number"
            android:background="@drawable/border"
            android:backgroundTintMode="src_over"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="20sp"
            android:maxLength="3"
            android:maxLines="1"
            android:textAlignment="center"
            android:id="@+id/editTextLitros" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/kilometragem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:textStyle="normal|bold"
            android:textColor="#006400"
            android:id="@+id/textViewKilometragem" />

        <TextView
            android:text="@string/litros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:textStyle="normal|bold"
            android:textColor="#006400"
            android:id="@+id/textViewLitros" />

    </TableRow>

    <TableRow>
    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calcular" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/limpar" />

    </TableRow>

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:textStyle="normal|bold"
        android:paddingTop="20dp"
        android:textColor="#006400"
        android:id="@+id/textViewResultado"
        android:textAlignment="center" />

</TableLayout>
